--- a/lausnir.Rmd
+++ b/lausnir.Rmd
@@ -1,6 +1,6 @@
 % Inngangur að líkindafræði
 % Rúnar Berg Baugsson Sigríðarson; Tómas Ari Gíslason
-% 20. mars 2014
+% 28. mars 2014
 
 Dæmi 17
 =======
@@ -197,5 +197,52 @@ plot(hist_Y, col=colors[2], add=TRUE)
 box()
 legend("topleft", c("venjulegir", "skrítnir"),
        col=colors, pch=15, bty="n")
-
 ```
+
+Er til annað par af sex hliða teningum (eins og $η$ og $θ$), þannig að summa útkomanna hafi sömu dreifingu og $X$?
+------------------------------------------------------------------------------------------------------------------
+
+Prófum allar mögulegar samstæður. Tökum eftir að til að útkomurúmið sé
+það sama þurfa báðir teningar að innihalda nákvæmlega einn ás og
+nákvæmlega eina samstæðu þannig að $a_6 + b_6 = 12$. Svo það er nóg að
+taka einn teninginn upp í $6$ og hinn í $9$ (þar sem við getum byrjað á
+$a_6 = 3$).
+
+Þar sem við förum í tífalda for-lykju, þá skulum við skrifa kóðann í Python.
+
+```{r engine='python'}
+def d_equal(a,b):
+    """
+    Test if die `a` and `b` have the same posible
+    totals as the normal pair of die
+    """
+    d_sums = [0,1,2,3,4,5,6,5,4,3,2,1,0]
+    sums   = [0,0,0,0,0,0,0,0,0,0,0,0,0]
+    for i in a:
+        for j in b:
+            try:
+                sums[i+j-1] += 1
+            except IndexError:
+                return False
+    return sums == d_sums
+
+for a1 in range(2,7):
+    for a2 in range(a1,7):
+        for a3 in range(a2,7):
+            for a4 in range(a3,7):
+                for a5 in range(a4,7):
+                    for b1 in range(a1,10):
+                        for b2 in range(b1,10):
+                            for b3 in range(b2, 10):
+                                for b4 in range(b3, 10):
+                                    for b5 in range(b4, 10):
+                                        a = (1,a1,a2,a3,a4,a5)
+                                        b = (1,b1,b2,b3,b4,b5)
+                                        if d_equal(a,b):
+                                            print('')
+                                            print(a)
+                                            print(b)
+```
+
+Sem eru annarsvegar teningar $η$ og $θ$ og venjulegu teningarnir
+hinsvegar. Svo svarið er *nei*.
